Agregar cambios de pago cliente

--- a/src/app/pages/inventario/stock/inventario-stock.component.html
+++ b/src/app/pages/inventario/stock/inventario-stock.component.html
@@ -4,7 +4,7 @@
 <ng-template #headerT>
   <app-title [titleLabel]="titleLabel" [subtitle]="subTitleLabel" [showBack]="true" variant="tinted" tone="brand"
     (cancel)="goBack()">
-    <ui-button [icon]="Package" label="Ajuste Manual" variant="primary" size="md" [to]="['/inventario/ajuste']"></ui-button>
+    <ui-button [icon]="Package" label="Ajuste Manual" variant="primary" size="md" [to]="['/inventario/ajustar']"></ui-button>
     <ui-button [icon]="ArrowLeftRight" label="Ver Kardex" variant="outline" size="md" [to]="['/kardex']"></ui-button>
   </app-title>
 </ng-template>
