--- a/src/app/shared/ui/summary/summary.component.html
+++ b/src/app/shared/ui/summary/summary.component.html
@@ -16,7 +16,7 @@
     <span [ngClass]="labelSizeClass" class="font-semibold flex-1">{{ label }}</span>
 
     <!-- Valor -->
-    <span [ngClass]="textSizeClass" class="font-bold whitespace-nowrap">
+    <span [ngClass]="textSizeClass" class="font-bold">
       {{ value }}
     </span>
   </div>
